
IMPORTANT: When you have .jrb files, ensure after upgrading to Horizon 34 you explicitly configure JRobin in a file like `$\{OPENNMS_HOME}/etc/opennms.properties.d/timeseries.properties`.

.Configure explicitly JRobin for Horizon 34.x if required
[source, console]
----
org.opennms.rrd.strategyClass=org.opennms.netmgt.rrd.jrobin.JRobinRrdStrategy
----

== Deprecation of JRobin as timeseries storage

The release of Horizon 34 will be the last version which supports reading and writing timeseries data using JRobin.
The JRobin library and the JRobin timeseries strategy will be removed from Horizon 35+ moving forward.

== Deprecation of Reportd service

The Reportd service has been deprecated and removed from service configuration due to low user adoption. The service code will be fully removed in the next Horizon/Meridian release.


=== OpenNMS Minion environment variables changes
The OpenNMS Minion Docker container no longer uses the KAFKA_SINK, KAFKA_RPC and KAFKA_TWIN prefixes to configure Kafka.
Instead, only the KAFKA_IPC prefix is used, which ensures that all Kafka-related settings are set correctly for all features and that ActiveMQ is no longer installed incorrectly.

=== Secure Credentials Vault changes
The `Secure Credentials Vault` in `OpenNMS` traditionally supported the `JCEKS` keystore format. As of the latest enhancement,
support has been added for the `PKCS12` keystore format.

Set `org.opennms.features.scv.keystore.type=PKCS12` in configuration file
 `$OPENNMS_HOME/etc/opennms.properties.d/scv.properties.`

If you want to convert the `PKCS12` keystore format instead of `JCEKS`, be sure to update the file extension to match the new format (e.g., use `.pk12` instead of `.jce`).
You can convert a `JCEKS` file to `PKCS12` using the following command.
`keytool -importkeystore -srckeystore $OPENNMS_HOME/etc/scv.jce -destkeystore $OPENNMS_HOME/etc/scv.pk12 -deststoretype pkcs12`.